<resources>
    <string name="app_name">My Sunflower</string>
    <string name="set_permissions_in_settings">Go to Settings -> Apps and Notifications ->
        WorkManager Demo -> App Permissions and grant access to Storage.</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="username_hint">用户名/手机号/邮箱</string>
    <string name="password_hint">密码</string>
</resources>