<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jsx.demo.viewModel.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ribbons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <EditText
            android:id="@+id/et_username"
            style="@style/CommonEditStyle"
            android:layout_marginTop="@dimen/dp_50"
            android:drawableStart="@drawable/common_ic_account"
            android:hint="@string/username_hint"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/et_password"
            style="@style/CommonEditStyle"
            android:layout_marginTop="@dimen/dp_50"
            android:drawableStart="@drawable/common_ic_pwd"
            android:hint="@string/password_hint"
            app:layout_constraintTop_toBottomOf="@+id/et_username"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/register"
            android:onClick="@{viewModel.registerClickListener}"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:onClick="@{viewModel.resetPasswordClickListener}"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Button
            android:id="@+id/btn_login"
            style="@style/CommonButtonStyle"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>